Updates to version 2 VIIRS access and geolocation workflow

--- a/Aim2/code/Python/02afd-modis-viirs_archive-nifc.ipynb
+++ b/Aim2/code/Python/02afd-modis-viirs_archive-nifc.ipynb
@@ -763,12 +763,12 @@
     "    \n",
     "    afd['VID'] = afd.index # add a unique ID\n",
     "\n",
-    "    ####################################\n",
-    "    # Remove low confidence observations\n",
-    "    try:\n",
-    "        afd = afd[afd['CONFIDENCE'] != 'l']\n",
-    "    except KeyError as e:\n",
-    "        print(f\"KeyError: {e}\")\n",
+    "    # ####################################\n",
+    "    # # Remove low confidence observations\n",
+    "    # try:\n",
+    "    #     afd = afd[afd['CONFIDENCE'] != 'l']\n",
+    "    # except KeyError as e:\n",
+    "    #     print(f\"KeyError: {e}\")\n",
     "\n",
     "    ############################\n",
     "    # Extract within fire bounds\n",
@@ -1087,15 +1087,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of fires before filtering: 144964\n",
-      "Number of fires after filtering: 144954\n"
+      "Number of AFDs before filtering: 144964\n",
+      "Number of AFDs after filtering: 144954\n"
      ]
     }
    ],
    "source": [
     "# Only keep events with > X observations from either instrument\n",
     "\n",
-    "print(f\"Number of fires before filtering: {len(afd_events_plots_c)}\")\n",
+    "print(f\"Number of AFDs before filtering: {len(afd_events_plots_c)}\")\n",
     "\n",
     "# Get a list of IDs of fires with > 1 obs.\n",
     "ids = afd_counts[afd_counts[\"counts\"] > 1]\n",
@@ -1105,7 +1105,7 @@
     "# Keep only fires with greater than 1 obs.\n",
     "afd_events_plots_c = afd_events_plots_c[afd_events_plots_c['NIFC_ID'].isin(ids)]\n",
     "\n",
-    "print(f\"Number of fires after filtering: {len(afd_events_plots_c)}\")"
+    "print(f\"Number of AFDs after filtering: {len(afd_events_plots_c)}\")"
    ]
   },
   {
@@ -1147,6 +1147,298 @@
    "source": [
     "print(len(afd_events_plots_c['NIFC_ID'].unique()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "94cd2320-bd4f-467d-abe8-3e9c1af45ea8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NIFC_ID</th>\n",
+       "      <th>NIFC_NAME</th>\n",
+       "      <th>NIFC_ACRES</th>\n",
+       "      <th>FINAL_ACRES</th>\n",
+       "      <th>pct_aspen</th>\n",
+       "      <th>INCIDENT_ID</th>\n",
+       "      <th>INCIDENT_NAME</th>\n",
+       "      <th>START_YEAR</th>\n",
+       "      <th>CAUSE</th>\n",
+       "      <th>DISCOVERY_DATE</th>\n",
+       "      <th>...</th>\n",
+       "      <th>WF_CESSATION_DOY</th>\n",
+       "      <th>STR_DESTROYED_TOTAL</th>\n",
+       "      <th>STR_DAMAGED_TOTAL</th>\n",
+       "      <th>STR_THREATENED_MAX</th>\n",
+       "      <th>EVACUATION_REPORTED</th>\n",
+       "      <th>PEAK_EVACUATIONS</th>\n",
+       "      <th>WF_PEAK_AERIAL</th>\n",
+       "      <th>WF_PEAK_PERSONNEL</th>\n",
+       "      <th>na_l3name</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>14</td>\n",
+       "      <td>416</td>\n",
+       "      <td>54130.98</td>\n",
+       "      <td>54129</td>\n",
+       "      <td>38.614463</td>\n",
+       "      <td>2018_9091030_416</td>\n",
+       "      <td>416</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>U</td>\n",
+       "      <td>2018-06-01 11:02:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>184</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3386</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2182</td>\n",
+       "      <td>15</td>\n",
+       "      <td>429.125</td>\n",
+       "      <td>Southern Rockies</td>\n",
+       "      <td>MULTIPOLYGON (((-1047907.942 1672642.863, -104...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>24</td>\n",
+       "      <td>PLATEAU</td>\n",
+       "      <td>19677.32</td>\n",
+       "      <td>19634</td>\n",
+       "      <td>1.305924</td>\n",
+       "      <td>2018_9223810_PLATEAU</td>\n",
+       "      <td>PLATEAU</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>L</td>\n",
+       "      <td>2018-07-22 16:18:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>229</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "      <td>143.6</td>\n",
+       "      <td>Southern Rockies</td>\n",
+       "      <td>POLYGON ((-1094448.086 1686999.388, -1094448.7...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>26</td>\n",
+       "      <td>PLUMTAW</td>\n",
+       "      <td>721.4</td>\n",
+       "      <td>721</td>\n",
+       "      <td>70.241348</td>\n",
+       "      <td>2022_14542839_PLUMTAW</td>\n",
+       "      <td>PLUMTAW</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>U</td>\n",
+       "      <td>2022-05-17 13:49:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>138</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>75</td>\n",
+       "      <td>1</td>\n",
+       "      <td>200</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>242.6666666666666</td>\n",
+       "      <td>Southern Rockies</td>\n",
+       "      <td>POLYGON ((-969787.326 1648469.699, -969792.261...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>33</td>\n",
+       "      <td>DOE CANYON</td>\n",
+       "      <td>2559.52</td>\n",
+       "      <td>2560</td>\n",
+       "      <td>8.358058</td>\n",
+       "      <td>2019_10738675_DOE CANYON</td>\n",
+       "      <td>DOE CANYON</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>L</td>\n",
+       "      <td>2019-06-20 14:41:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>184</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>44</td>\n",
+       "      <td>Southern Rockies</td>\n",
+       "      <td>POLYGON ((-1104275.303 1705190.773, -1104275.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>43</td>\n",
+       "      <td>CHRIS MOUNTAIN</td>\n",
+       "      <td>510.51</td>\n",
+       "      <td>511</td>\n",
+       "      <td>1.574569</td>\n",
+       "      <td>2023_15990891_CHRIS MOUNTAIN</td>\n",
+       "      <td>CHRIS MOUNTAIN</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>L</td>\n",
+       "      <td>2023-06-28 15:57:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>185</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>293.1785714285714</td>\n",
+       "      <td>Southern Rockies</td>\n",
+       "      <td>POLYGON ((-984454.113 1641237.622, -984454.991...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  NIFC_ID       NIFC_NAME NIFC_ACRES FINAL_ACRES  pct_aspen  \\\n",
+       "2      14             416   54130.98       54129  38.614463   \n",
+       "4      24         PLATEAU   19677.32       19634   1.305924   \n",
+       "5      26         PLUMTAW      721.4         721  70.241348   \n",
+       "6      33      DOE CANYON    2559.52        2560   8.358058   \n",
+       "7      43  CHRIS MOUNTAIN     510.51         511   1.574569   \n",
+       "\n",
+       "                    INCIDENT_ID   INCIDENT_NAME START_YEAR CAUSE  \\\n",
+       "2              2018_9091030_416             416       2018     U   \n",
+       "4          2018_9223810_PLATEAU         PLATEAU       2018     L   \n",
+       "5         2022_14542839_PLUMTAW         PLUMTAW       2022     U   \n",
+       "6      2019_10738675_DOE CANYON      DOE CANYON       2019     L   \n",
+       "7  2023_15990891_CHRIS MOUNTAIN  CHRIS MOUNTAIN       2023     L   \n",
+       "\n",
+       "       DISCOVERY_DATE  ... WF_CESSATION_DOY STR_DESTROYED_TOTAL  \\\n",
+       "2 2018-06-01 11:02:00  ...              184                   0   \n",
+       "4 2018-07-22 16:18:00  ...              229                   0   \n",
+       "5 2022-05-17 13:49:00  ...              138                   0   \n",
+       "6 2019-06-20 14:41:00  ...              184                   0   \n",
+       "7 2023-06-28 15:57:00  ...              185                   0   \n",
+       "\n",
+       "  STR_DAMAGED_TOTAL STR_THREATENED_MAX EVACUATION_REPORTED PEAK_EVACUATIONS  \\\n",
+       "2                 0               3386                   1             2182   \n",
+       "4                 0                NaN                 NaN              NaN   \n",
+       "5                 0                 75                   1              200   \n",
+       "6                 0                NaN                 NaN              NaN   \n",
+       "7                 0                  7                   1                2   \n",
+       "\n",
+       "  WF_PEAK_AERIAL  WF_PEAK_PERSONNEL         na_l3name  \\\n",
+       "2             15            429.125  Southern Rockies   \n",
+       "4              4              143.6  Southern Rockies   \n",
+       "5            4.5  242.6666666666666  Southern Rockies   \n",
+       "6            NaN                 44  Southern Rockies   \n",
+       "7              7  293.1785714285714  Southern Rockies   \n",
+       "\n",
+       "                                            geometry  \n",
+       "2  MULTIPOLYGON (((-1047907.942 1672642.863, -104...  \n",
+       "4  POLYGON ((-1094448.086 1686999.388, -1094448.7...  \n",
+       "5  POLYGON ((-969787.326 1648469.699, -969792.261...  \n",
+       "6  POLYGON ((-1104275.303 1705190.773, -1104275.0...  \n",
+       "7  POLYGON ((-984454.113 1641237.622, -984454.991...  \n",
+       "\n",
+       "[5 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Save out the fires in southern rockies with > 10 AFD\n",
+    "fires = afd_counts[afd_counts['counts'] > 10]\n",
+    "aspen_events_srm = aspen_events[aspen_events['na_l3name'] == 'Southern Rockies']\n",
+    "aspen_events_srm = aspen_events_srm[aspen_events_srm['NIFC_ID'].isin(fires['NIFC_ID'].unique())]\n",
+    "aspen_events_srm.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "81b1e111-cb93-455d-b8dd-98df0c0e000d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "49"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(aspen_events_srm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e6a91eac-6e8b-4191-852a-73444eb20693",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved to: /Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/mod/NIFC/nifc-ics_2018_to_2023-aspen_SRM.gpkg\n"
+     ]
+    }
+   ],
+   "source": [
+    "out_fp = os.path.join(projdir,'data/spatial/mod/NIFC/nifc-ics_2018_to_2023-aspen_SRM.gpkg')\n",
+    "aspen_events_srm.to_file(out_fp)\n",
+    "print(f\"Saved to: {out_fp}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8df39209-96d7-4d93-a2ea-7e8d6f838aee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "328d3281-eebe-4b3e-b0ba-b5a9cde7e323",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
