--- a/Aim2/code/Python/XXviirs_swath2grid-MaxFRP.ipynb
+++ b/Aim2/code/Python/XXviirs_swath2grid-MaxFRP.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "652e9667-ea08-4b6a-97d0-dec73a5242b4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Success !\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Reads VIIRS NetCDF files (active fire and geolocation data)\n",
@@ -58,27 +50,20 @@
     "datadir = os.path.join(maindir,'Aim2/data/spatial/raw/VIIRS/')\n",
     "dataoutdir = os.path.join(maindir,'Aim2/data/spatial/mod/VIIRS/')\n",
     "\n",
+    "# Directories\n",
+    "maindir = '/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/'\n",
+    "projdir = os.path.join(maindir, 'aspen-fire/Aim2/')\n",
     "# File path information\n",
     "print(\"Success !\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1b3a3566-b1cd-4ca3-8c29-4c157fbcd4f0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Function to process VIIRS NetCDF files is ready to use!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Function to convert swath to grid\n",
-    "\n",
     "def list_files(path, ext, recursive):\n",
     "    \"\"\"\n",
     "    List files of a specific type in a directory or subdirectories\n",
@@ -310,12 +295,12 @@
     "    FP_power_grid[~fire_pixels] = np.nan # Set areas outside the active fire detections as NaN\n",
     "    # Further mask the array by a bounding geometry\n",
     "\n",
-    "    ########################################################################\n",
-    "    # Define a global sinusoidal grid and resample the swath grid to it    #\n",
+    "    # ########################################################################\n",
+    "    # # Define a global sinusoidal grid and resample the swath grid to it    #\n",
     "\n",
-    "    index, outdex, indexArr, distArr = kdt.get_neighbour_info(areaDef, global_area_def, 375, neighbours=1)\n",
-    "    sdGEO_res = kdt.get_sample_from_neighbour_info('nn', global_area_def.shape, sdGEO, index, outdex, indexArr, fill_value=fv)\n",
-    "    # FP_power_grid_res = kdt.get_sample_from_neighbour_info('nn', global_area_def.shape, FP_power_grid, index, outdex, indexArr, fill_value=np.nan)\n",
+    "    # index, outdex, indexArr, distArr = kdt.get_neighbour_info(areaDef, global_area_def, 375, neighbours=1)\n",
+    "    # sdGEO_res = kdt.get_sample_from_neighbour_info('nn', global_area_def.shape, sdGEO, index, outdex, indexArr, fill_value=fv)\n",
+    "    # # FP_power_grid_res = kdt.get_sample_from_neighbour_info('nn', global_area_def.shape, FP_power_grid, index, outdex, indexArr, fill_value=np.nan)\n",
     "\n",
     "\n",
     "    ############################################\n",
@@ -336,7 +321,7 @@
     "    export_geotiff(FP_power_grid, outName, gt, epsg, fv)\n",
     "\n",
     "    outName = outName.replace(\"FP_power\", \"fire_mask\")\n",
-    "    export_geotiff(sdGEO_res, outName, gt, epsg, fv)\n",
+    "    export_geotiff(sdGEO, outName, gt, epsg, fv)\n",
     "\n",
     "\n",
     "def get_coords(geom, buffer):\n",
@@ -361,76 +346,43 @@
     "    max_frp = common_frp_stack.max(dim='time', skipna=True)\n",
     "    return max_frp\n",
     "\n",
-    "print(\"Function to process VIIRS NetCDF files is ready to use!\")\n"
+    "print(\"Function to process VIIRS NetCDF files is ready to use!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "54bce8bb-50a9-4d94-929a-a32dbd80fd77",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Length of VNP14IMG: 17\n",
-      "Length of VJ114IMG: 16\n",
-      "Length of Geolocation files: 33\n",
-      "/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/raw/VIIRS/FIRED_3518/VNP14IMG/VNP14IMG.A2021242.2048.002.2024074102039.nc\n",
-      "/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/raw/VIIRS/FIRED_3518/VJ114IMG/VJ114IMG.A2021239.0936.002.2024081210828.nc\n",
-      "/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/raw/VIIRS/FIRED_3518/VNP03IMG/VNP03IMG.A2021240.2130.002.2021264132733.nc\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Testing for one fire\n",
-    "testDir = os.path.join(datadir,'FIRED_3518')\n",
+    "testDir = os.path.join(datadir,'416')\n",
     "\n",
     "# Get list of fire data files\n",
     "vnp_files = list_files(testDir,\"VNP14*.nc\",recursive=True)\n",
-    "vj1_files = list_files(testDir,\"VJ114*.nc\",recursive=True)\n",
-    "\n",
-    "# Grab the geolocation data\n",
     "geo_files = list_files(testDir,\"*03IMG*.nc\",recursive=True)\n",
     "\n",
-    "print(f\"Length of VNP14IMG: {len(vnp_files)}\\nLength of VJ114IMG: {len(vj1_files)}\\nLength of Geolocation files: {len(geo_files)}\")\n",
+    "print(f\"Length of VNP14IMG: {len(vnp_files)}\\nLength of Geolocation files: {len(geo_files)}\")\n",
     "\n",
     "print(vnp_files[0])\n",
-    "print(vj1_files[0])\n",
     "print(geo_files[0])\n",
     "\n",
     "# Create a dictionary to store the file paths\n",
     "datadict = {\n",
-    "    'VNP14IMG': vnp_files,\n",
-    "    'VJ114IMG': vj1_files\n",
+    "    'VNP14IMG': vnp_files\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e7c8b8e6-6cdf-486e-ae63-6cdb78b2b725",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['fired_id', 'ig_date', 'ig_day', 'ig_month', 'ig_year', 'last_date',\n",
-      "       'event_dur', 'tot_pix', 'tot_ar_km2', 'fsr_px_dy', 'fsr_km2_dy',\n",
-      "       'mx_grw_px', 'mn_grw_px', 'mu_grw_px', 'mx_grw_km2', 'mn_grw_km2',\n",
-      "       'mu_grw_km2', 'mx_grw_dte', 'x', 'y', 'ig_utm_x', 'ig_utm_y', 'lc_code',\n",
-      "       'lc_mode', 'lc_name', 'lc_desc', 'lc_type', 'eco_mode', 'eco_name',\n",
-      "       'eco_type', 'tot_perim', 'pct_aspen', 'geometry'],\n",
-      "      dtype='object')\n",
-      "102\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Load fire data and create a dictionary with bounding coordinates\n",
-    "fires_path = os.path.join(maindir,'Aim2/data/spatial/mod/FIRED/fired_events_west_aspen.gpkg')\n",
+    "# Load the fire dataset\n",
+    "fires_path = os.path.join(projdir,'data/spatial/mod/NIFC/nifc-ics_2018_to_2023-aspen_SRM.gpkg')\n",
     "fires = gpd.read_file(fires_path)\n",
     "print(fires.columns)\n",
     "print(len(fires))"
@@ -438,20 +390,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "215e769d-bd0a-4fdf-b209-256add7d6618",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FIRED_ID: 3518, \n",
-      "Bounding Coordinates: \n",
-      "[(-113.4870457742665, 37.31747928447832), (-113.45119936806327, 37.31747928447832), (-113.45119936806327, 37.336690972515356), (-113.4870457742665, 37.336690972515356), (-113.4870457742665, 37.31747928447832)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a dictionary to store fire bounding coordinates\n",
     "# These can be used to subset the arrays before exporting the data\n",
@@ -459,8 +401,8 @@
     "buffer = 375 \n",
     "\n",
     "for index, row in fires.iterrows():\n",
-    "    fire_id = row['fired_id']\n",
-    "    perim = fires.loc[fires['fired_id'] == fire_id]\n",
+    "    fire_id = row['NIFC_ID']\n",
+    "    perim = fires.loc[fires['NIFC_ID'] == fire_id]\n",
     "    coords = get_coords(perim, buffer)\n",
     "    coords_dict[fire_id] = coords\n",
     "\n",
@@ -471,18 +413,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "ef36fc5e-e207-46aa-ac30-4bba08f8111f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(53373, 106747)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a the global sinusoidal grid\n",
     "global_area_def = create_global_grid()\n",
@@ -494,36 +428,13 @@
    "execution_count": null,
    "id": "db720c6c-ed34-4b2e-8076-e3914d3eadcf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing NetCDF files for VNP14IMG\n",
-      "There are 17 associated geolocation files ...\n",
-      "VNP14IMG.A2021242.2048.002.2024074102039\n",
-      "/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/raw/VIIRS/FIRED_3518/VNP03IMG/VNP03IMG.A2021242.2048.002.2021264144156.nc\n",
-      "latGEO shape: (6464, 6400)\n",
-      "lonGEO shape: (6464, 6400)\n",
-      "Data Type: <class 'numpy.ndarray'>\n",
-      "UTM Zone of middle swath: 32611\n",
-      "FP_power shape: (1659,)\n",
-      "FP_latitude shape: (1659,)\n",
-      "FP_longitude shape: (1659,)\n",
-      "Fire Mask shape: (6464, 6400)\n",
-      "Pixel Dims: 0.0034526084770449017;\n",
-      "Number of columns: 11060;\n",
-      "Number of rows: 7308\n",
-      "Area definition shape: (7308, 11060)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "t0 = time.time()\n",
     "\n",
     "dat = 'FP_power' # the SDS we are extracting ...\n",
     "\n",
-    "fired_id = '3518'\n",
+    "fired_id = '14'\n",
     "coords_ = coords_dict[fired_id]\n",
     "\n",
     "out_dir = testDir\n",
